email sending section add

--- a/mern-blog/backend/.env
+++ b/mern-blog/backend/.env
@@ -2,3 +2,6 @@ MONGODB_URL = mongodb+srv://softicon241:softicon241@cluster0.0hwudyp.mongodb.net
 
 
 JWT_KET = jashkMsiydfTaDFDfsdrf
+
+
+SEND_GRID_API_KEY=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
